# roam-nvim

./: .env  Cargo.toml  Makefile  README.md
dev_database/: CORE.db
doc/: development.md
migrations/2022-04-16-134823_create_files/: up.sql
migrations/2022-04-16-134832_create_links/: up.sql
migrations/2022-04-16-142604_create_aliases/: up.sql
migrations/2022-04-29-114331_create_nodes/: down.sql  up.sql
migrations/2022-04-29-114344_create_links/: down.sql  up.sql
migrations/2022-04-29-114356_create_aliases/: down.sql  up.sql
src/: backend.rs  database.rs  error.rs  graph.rs  lib.rs  node_dir.rs  schema.rs  test_utils.rs  types.rs  utils.rs
src/backend/: builder.rs  mod.rs
src/database/: builder.rs  mod.rs
src/nodes_dir/: builder.rs  mod.rs
