[package]
name = "rs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
# diesel crates
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
# gives us the paths to several standardized paths
dirs = "4.0.0"
