[package]
name = "roam-nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
# diesel crates
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dirs = "4.0.0" # gives us the paths to several standardized paths
mlua = { version = "0.7.4", features = ["luajit", "async", "macros", "module", "vendored"]}
walkdir = "2.3.2"
blake2 = "0.10.4"
base16ct = {version = "0.1.1", features = ["alloc"]}
